Fix: Sticky footer won’t block content on mobile view

--- a/frontend/src/scss/ui/_footer.scss
+++ b/frontend/src/scss/ui/_footer.scss
@@ -1,7 +1,7 @@
-.outer-footer {
+.footer-copyright, .push{
   //max-width: $wrapper-max-width;
   //margin: 0 auto;
-  //padding: $wrapper-padding;
+  padding: $wrapper-padding;
   position: fixed;
   bottom: 0;
   background-color: white;
